[package]
name = "nix-editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.10.2"
rowan = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.10", features = ["derive"] }
