[package]
name = "nix-editor"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.11.0"
rowan = "0.15.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2.10", features = ["derive"] }
anyhow = "1.0.58"

[dev-dependencies]
tempfile = "3.8.0"
